feat: main page 구현

--- a/0326_assignment1/index.html
+++ b/0326_assignment1/index.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <title>mportpolio_2016112661</title>
+    <link href="styles/mportpolio.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body class="app">
+    <header class="main-header">
+      <div>
+        <h1>HyunWoo Kim</h1>
+        <div>2016112661</div>
+      </div>
+    </header>
+    <nav class="main-navigator">
+      <ul>
+        <li><a>About</a></li>
+        <li><a>Project</a></li>
+        <li><a>Experience</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
