styles: spacer를 통해 위 아래 여백 조정

--- a/0326_assignment1/index.html
+++ b/0326_assignment1/index.html
@@ -6,12 +6,13 @@
     <link href="styles/mportpolio.css" rel="stylesheet" />
   </head>
   <body class="app">
-    <header class="main-header">
+    <header class="spacer"></header>
+    <section class="title">
       <div>
         <h1>HyunWoo Kim</h1>
         <div>2016112661</div>
       </div>
-    </header>
+    </section>
     <nav class="main-navigator">
       <ul>
         <li><a>About</a></li>
@@ -19,5 +20,6 @@
         <li><a>Experience</a></li>
       </ul>
     </nav>
+    <footer class="spacer"></footer>
   </body>
 </html>
