chore: rename file, title

--- a/0326_assignment1/index.html
+++ b/0326_assignment1/index.html
@@ -2,8 +2,8 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>mportpolio_2016112661</title>
-    <link href="styles/mportpolio.css" rel="stylesheet" />
+    <title>2016112661 김현우</title>
+    <link href="styles/index.css" rel="stylesheet" />
   </head>
   <body class="app">
     <header class="spacer"></header>
