feat: 페이지 추가

--- a/0326_assignment1/index.html
+++ b/0326_assignment1/index.html
@@ -15,9 +15,9 @@
     </section>
     <nav class="main-navigator">
       <ul>
-        <li><a>About</a></li>
-        <li><a>Project</a></li>
-        <li><a>Experience</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="project.html">Project</a></li>
+        <li><a href="experience.html">Experience</a></li>
       </ul>
     </nav>
     <footer class="spacer"></footer>
