--- a/0326_assignment1/index.html
+++ b/0326_assignment1/index.html
@@ -13,12 +13,10 @@
         <div>2016112661</div>
       </div>
     </section>
-    <nav class="main-navigator">
-      <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="project.html">Project</a></li>
-        <li><a href="experience.html">Experience</a></li>
-      </ul>
+    <nav class="navigator">
+      <a class="linker" href="about.html">About</a>
+      <a class="linker" href="project.html">Project</a>
+      <a class="linker" href="experience.html">Experience</a>
     </nav>
     <footer class="spacer"></footer>
   </body>
