--- a/0326_assignment1/index.html
+++ b/0326_assignment1/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
     <title>2016112661 김현우</title>
     <link href="styles/index.css" rel="stylesheet" />
   </head>
@@ -13,7 +16,7 @@
         <div>2016112661</div>
       </div>
     </section>
-    <nav class="navigator">
+    <nav class="navigation">
       <a class="linker" href="about.html">About</a>
       <a class="linker" href="project.html">Project</a>
       <a class="linker" href="experience.html">Experience</a>
