--- a/0326_assignment1/about.html
+++ b/0326_assignment1/about.html
@@ -17,5 +17,8 @@
   </head>
   <body>
     About
+    <i class="fa fa-envelope" aria-hidden="true"></i>
+    <i class="fa fa-phone" aria-hidden="true"></i>
+    <i class="fa fa-github" aria-hidden="true"></i>
   </body>
 </html>
