feat: 공통 네비게이션 바 구현

--- a/0326_assignment1/index.html
+++ b/0326_assignment1/index.html
@@ -6,6 +6,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <title>2016112661 김현우</title>
+    <link rel="stylesheet" href="styles/common.css" />
     <link href="styles/index.css" rel="stylesheet" />
   </head>
   <body class="app">
@@ -16,7 +17,7 @@
         <div>2016112661</div>
       </div>
     </section>
-    <nav class="navigation">
+    <nav class="linker-container">
       <a class="linker" href="about.html">About</a>
       <a class="linker" href="project.html">Project</a>
       <a class="linker" href="experience.html">Experience</a>
