--- a/0326_assignment1/about.html
+++ b/0326_assignment1/about.html
@@ -14,11 +14,23 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles/common.css" />
+    <link rel="stylesheet" href="styles/about.css" />
   </head>
-  <body>
-    About
-    <i class="fa fa-envelope" aria-hidden="true"></i>
-    <i class="fa fa-phone" aria-hidden="true"></i>
-    <i class="fa fa-github" aria-hidden="true"></i>
+  <body class="app">
+    <nav class="navigation">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="project.html">Project</a></li>
+        <li><a href="experience.html">Experience</a></li>
+      </ul>
+    </nav>
+    <section class="main">
+      About
+      <i class="fa fa-envelope" aria-hidden="true"></i>
+      <i class="fa fa-phone" aria-hidden="true"></i>
+      <i class="fa fa-github" aria-hidden="true"></i>
+    </section>
   </body>
 </html>
