feat: nav-spacer를 통한 상단 navigation 위치 공백 생성

--- a/0326_assignment1/experience.html
+++ b/0326_assignment1/experience.html
@@ -19,5 +19,6 @@
         <li><a href="experience.html">Experience</a></li>
       </ul>
     </nav>
+    <div class="nav-spacer"></div>
   </body>
 </html>
