--- a/0326_assignment1/about.html
+++ b/0326_assignment1/about.html
@@ -26,6 +26,7 @@
         <li><a href="experience.html">Experience</a></li>
       </ul>
     </nav>
+    <div class="nav-spacer"></div>
     <section class="main">
       About
       <i class="fa fa-envelope" aria-hidden="true"></i>
