--- a/0326_assignment1/project.html
+++ b/0326_assignment1/project.html
@@ -19,5 +19,6 @@
         <li><a href="experience.html">Experience</a></li>
       </ul>
     </nav>
+    <div class="nav-spacer"></div>
   </body>
 </html>
