feat: About 페이지 내 사진 및 자기소개 추가

--- a/0326_assignment1/about.html
+++ b/0326_assignment1/about.html
@@ -27,11 +27,31 @@
       </ul>
     </nav>
     <div class="nav-spacer"></div>
-    <section class="main">
-      About
-      <i class="fa fa-envelope" aria-hidden="true"></i>
-      <i class="fa fa-phone" aria-hidden="true"></i>
-      <i class="fa fa-github" aria-hidden="true"></i>
-    </section>
+    <main class="main">
+      <h1 class="title">About Me</h1>
+      <section class="profile">
+        <img src="assets/me.jpeg" alt="김현우" />
+        <div>
+          <div>
+            <h1>김현우</h1>
+            <h2>Kim Hyun Woo</h2>
+          </div>
+          <div class="job">Web Developer</div>
+          <div class="introduce">
+            <p><b>React, Spring</b> 기반의 웹 개발을 좋아합니다.</p>
+            <p>
+              꼼꼼한 테스트를 통해 안정성을 추구하고자 합니다.<br />
+              문제 해결에 필요한 기술이라면, <b>빠르게 학습하고 적용</b>합니다.
+            </p>
+            <p>
+              개발자는 코드로 이야기하지만, 결국 사람과 함께 일합니다.<br />
+              어떻게 하면 내 <b>코드를 더 읽기 좋게</b> 할 수 있을지 항상
+              고민합니다.<br />
+              페어 프로그래밍과 코드리뷰같은 <b>공유, 협업 문화</b>에 익숙합니다.<br />
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
