feat: contact 항목 추가 및 테두리 그림자 추가

--- a/0326_assignment1/about.html
+++ b/0326_assignment1/about.html
@@ -29,8 +29,10 @@
     <div class="nav-spacer"></div>
     <main class="main">
       <h1 class="title">About Me</h1>
+
       <section class="profile">
         <img src="assets/me.jpeg" alt="김현우" />
+
         <div>
           <div>
             <h1>김현우</h1>
@@ -47,9 +49,27 @@
               개발자는 코드로 이야기하지만, 결국 사람과 함께 일합니다.<br />
               어떻게 하면 내 <b>코드를 더 읽기 좋게</b> 할 수 있을지 항상
               고민합니다.<br />
-              페어 프로그래밍과 코드리뷰같은 <b>공유, 협업 문화</b>에 익숙합니다.<br />
+              페어 프로그래밍과 코드리뷰같은 <b>공유, 협업 문화</b>에
+              익숙합니다.<br />
             </p>
           </div>
+        </div>
+
+        <div class="contact">
+          <span>
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            <b>010-3020-9754</b>
+          </span>
+          <span>
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+            <b>gusdn9754@gmail.com</b>
+          </span>
+          <span>
+            <a href="https://www.github.com/hwookim">
+              <i class="fa fa-github" aria-hidden="true"></i>
+              <b>github.com/hwookim</b>
+            </a>
+          </span>
         </div>
       </section>
     </main>
