feat: skills 항목 추가

--- a/0326_assignment1/about.html
+++ b/0326_assignment1/about.html
@@ -57,12 +57,12 @@
 
         <div class="contact">
           <span>
-            <i class="fa fa-phone" aria-hidden="true"></i>
-            <b>010-3020-9754</b>
-          </span>
-          <span>
             <i class="fa fa-envelope" aria-hidden="true"></i>
             <b>gusdn9754@gmail.com</b>
+          </span>
+          <span>
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            <b>010-3020-9754</b>
           </span>
           <span>
             <a href="https://www.github.com/hwookim">
@@ -70,6 +70,85 @@
               <b>github.com/hwookim</b>
             </a>
           </span>
+        </div>
+      </section>
+
+      <h1 class="title">Skills</h1>
+      <section class="skills">
+        <div class="skill-box">
+          <h2>Familiar</h2>
+          <div>
+            <span class="skill">
+              <img src="assets/skill_logo/javascript.png" alt="js" />
+              Javascript<sub>ES6</sub>
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/jest.png" alt="jest" />
+              Jest
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/react.png" alt="react" />
+              React.js
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/recoil.png" alt="recoil" />
+              Recoil
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/vue.png" alt="vue" />
+              Vue.js<sub>2</sub>
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/java.png" alt="java" />
+              Java<sub>8</sub>
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/junit.png" alt="junit" />
+              Junit5
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/springboot.png" alt="spring"/>
+              Spring Boot
+            </span>
+          </div>
+        </div>
+        <div class="skill-box center">
+          <h2>Tried</h2>
+          <div>
+            <span class="skill">
+              <img src="assets/skill_logo/typescript.jpeg" alt="ts" />
+              Typescript
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/nextjs.png" alt="next" />
+              Next.js
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/redux.png" alt="redux" />
+              Redux
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/storybook.png" alt="storybook" />
+              Storybook
+            </span>
+          </div>
+        </div>
+        <div class="skill-box">
+          <h2>Interested in</h2>
+          <div>
+            <span class="skill">
+              <img src="assets/skill_logo/graphql.png" alt="graphql" />
+              GraphQL
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/aws.png" alt="aws" />
+              AWS
+            </span>
+            <span class="skill">
+              <img src="assets/skill_logo/jenkins.png" alt="jenkins" />
+              Jenkins
+            </span>
+          </div>
         </div>
       </section>
     </main>
