docs: skill docker 추가

--- a/0326_assignment1/about.html
+++ b/0326_assignment1/about.html
@@ -148,6 +148,10 @@
               <img src="assets/skill_logo/jenkins.png" alt="jenkins" />
               Jenkins
             </span>
+            <span class="skill">
+              <img src="assets/skill_logo/docker.png" alt="docker" />
+              Docker
+            </span>
           </div>
         </div>
       </section>
