styles: mobile 기준 style 적용

--- a/0326_assignment1/about.html
+++ b/0326_assignment1/about.html
@@ -31,7 +31,9 @@
       <h1 class="title">About Me</h1>
 
       <section class="profile">
-        <img src="assets/me.jpeg" alt="김현우" />
+        <div class="me">
+          <img src="assets/me.jpeg" alt="김현우" />
+        </div>
 
         <div>
           <div>
@@ -107,7 +109,7 @@
               Junit5
             </span>
             <span class="skill">
-              <img src="assets/skill_logo/springboot.png" alt="spring"/>
+              <img src="assets/skill_logo/springboot.png" alt="spring" />
               Spring Boot
             </span>
           </div>
