styles: linker-container -> link-container

--- a/0326_assignment1/index.html
+++ b/0326_assignment1/index.html
@@ -17,10 +17,10 @@
         <div>2016112661</div>
       </div>
     </section>
-    <nav class="linker-container">
-      <a class="linker" href="about.html">About</a>
-      <a class="linker" href="project.html">Project</a>
-      <a class="linker" href="experience.html">Experience</a>
+    <nav class="link-container">
+      <a href="about.html">About</a>
+      <a href="project.html">Project</a>
+      <a href="experience.html">Experience</a>
     </nav>
     <footer class="spacer"></footer>
   </body>
