styles: 클래스명 변경 및 마진 조정

--- a/0326_assignment1/project.html
+++ b/0326_assignment1/project.html
@@ -41,17 +41,17 @@
 
         <h1 class="title">도란도란<span>(2020.07 ~ 2020.11)</span></h1>
 
-        <div class="describe">
+        <div class="project-describe">
           지도 위에서 주위 사람들과 소통할 수 있는
           <b>위치 기반 커뮤니티 서비스</b>
         </div>
 
-        <div class="info">
+        <div class="project-info">
           <div class="img-container">
             <img src="assets/dorandoran.png" alt="doran" />
           </div>
 
-          <div class="project-info">
+          <div class="project-detail">
             <div class="project-contribute">
               <h2>기여</h2>
               <ul>
