styles: mobile 기준 스타일 적용

--- a/0326_assignment1/project.html
+++ b/0326_assignment1/project.html
@@ -81,9 +81,9 @@
             <div class="project-stack">
               <h2>기술 스택</h2>
               <ul>
-                <li>FrontEnd : JavaScript (ES6), Vue.js 2, Vuetify, Axios</li>
-                <li>BackEnd : Java8, JUnit5, Spring Boot 2.3, Spring Data JPA, QueryDSL</li>
-                <li>Infra : Maria DB, AWS EC2, Jenkins, Nginx, Git</li>
+                <li><b>FrontEnd</b> : JavaScript (ES6), Vue.js 2, Vuetify, Axios</li>
+                <li><b>BackEnd</b> : Java8, JUnit5, Spring Boot 2.3, Spring Data JPA, QueryDSL</li>
+                <li><b>Infra</b> : Maria DB, AWS EC2, Jenkins, Nginx, Git</li>
               </ul>
             </div>
           </div>
