--- a/0326_assignment1/project.html
+++ b/0326_assignment1/project.html
@@ -81,8 +81,13 @@
             <div class="project-stack">
               <h2>기술 스택</h2>
               <ul>
-                <li><b>FrontEnd</b> : JavaScript (ES6), Vue.js 2, Vuetify, Axios</li>
-                <li><b>BackEnd</b> : Java8, JUnit5, Spring Boot 2.3, Spring Data JPA, QueryDSL</li>
+                <li>
+                  <b>FrontEnd</b> : JavaScript (ES6), Vue.js 2, Vuetify, Axios
+                </li>
+                <li>
+                  <b>BackEnd</b> : Java8, JUnit5, Spring Boot 2.3, Spring Data
+                  JPA, QueryDSL
+                </li>
                 <li><b>Infra</b> : Maria DB, AWS EC2, Jenkins, Nginx, Git</li>
               </ul>
             </div>
@@ -90,5 +95,7 @@
         </div>
       </article>
     </main>
+
+    <img class="character" src="assets/ompang.png" alt="ompang" />
   </body>
 </html>
