feat: experience 항목 추가

--- a/0326_assignment1/experience.html
+++ b/0326_assignment1/experience.html
@@ -8,17 +8,60 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>김현우 - Experience</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="styles/common.css" />
+    <link rel="stylesheet" href="styles/experience.css" />
   </head>
   <body>
     <nav class="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="project.html">Project</a></li>
+        <li><a href="experience.html">experience</a></li>
         <li><a href="experience.html">Experience</a></li>
       </ul>
     </nav>
     <div class="nav-spacer"></div>
+    <main class="main">
+      <article>
+        <h1 class="title">우아한 테크코스<span>(2020.02 ~ 2020.11)</span></h1>
+
+        <div class="experience-describe">
+          일반 사용자용 서비스를 개발하는 회사가 필요로 하는 역량을 가진 개발자
+          양성
+        </div>
+
+        <div class="experience-info">
+          <div class="img-container">
+            <img src="assets/wooteco-cover.jpg" alt="wooteco" />
+          </div>
+
+          <div class="experience-detail">
+            <p>현업에서의 개발 프로세스와 스킬을 간접적으로 느껴보고자 참여</p>
+            <ul>
+              <li>Java를 기반으로 한 Spring 웹 애플리케이션 개발 능력</li>
+              <li>미션 기반의 페어프로그래밍과 팀 프로젝트를 통한 협업 능력</li>
+              <li>TDD 사이클의 개발과 레거시 코드에 대한 리팩토링 경험</li>
+              <li>현직자의 코드리뷰를 통한 클린 코드 역량</li>
+            </ul>
+
+            <div class="link-container">
+              <a
+                      href="https://github.com/hwookim/woowacourse-projects"
+                      target="_blank"
+              >
+                <i class="fa fa-github" aria-hidden="true"></i>
+                자세한 이야기
+              </a>
+            </div>
+          </div>
+        </div>
+      </article>
+    </main>
   </body>
 </html>
