--- a/0326_assignment1/experience.html
+++ b/0326_assignment1/experience.html
@@ -22,7 +22,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="experience.html">experience</a></li>
+        <li><a href="project.html">Project</a></li>
         <li><a href="experience.html">Experience</a></li>
       </ul>
     </nav>
